--- a/index.html
+++ b/index.html
@@ -173,7 +173,8 @@
       <div class="container">
         Made by <a class="brown-text text-lighten-3" href="#!">Lansuu</a>
         <br>
-        <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize Framework</a>
+        <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize Framework                               Credits to all the artworks :)</a>
+        
       </div>
     </div>
   </footer>
