--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
       </div>
     </div>
-    <div class="parallax"><img src="public/traffic.jpg" alt="Unsplashed background img 1"></div>
+    <div class="parallax"><img src="public/iconic.jpg" alt="Unsplashed background img 1"></div>
   </div>
 
 
@@ -173,8 +173,8 @@
       <div class="container">
         Made by <a class="brown-text text-lighten-3" href="#!">Lansuu</a>
         <br>
-        <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize Framework                               Credits to all the artworks :)</a>
-        
+        <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize Framework</a>
+        <a class="brown-text text-lighten-3" href="https://unsplash.com">Credits to all artworks :)</a>
       </div>
     </div>
   </footer>
