--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="public/traffic1.jpg" alt="Unsplashed background img 2"></div>
+    <div class="parallax"><img src="public/traffic.jpg" alt="Unsplashed background img 2"></div>
   </div>
 
 <!--   <div class="container">
