--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
   <div class="parallax"><img src="public/img3.jpg" alt="Unsplashed background img 3"></div>
 </div> -->
 
-<footer class="page-footer black">
+<footer class="page-footer black lighten-1">
   <div class="container">
     <div class="row">
       <div class="col l6 s12">
